--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "arbitrage-alireza-mosusavi",
-  "module": "index.ts",
+  "module": "index.js",
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "typescript": "^5.9.2"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
     "chalk": "^5.5.0",
+    "dotenv": "^17.2.1",
     "fs": "^0.0.1-security",
     "jalaali-js": "^1.2.8",
     "puppeteer-core": "^24.16.0"
