--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     // Environment setup & latest features
-    "lib": ["ESNext"],
-    "target": "ESNext",
-    "module": "Preserve",
+    "target": "es6",
+    "module": "esnext",
+    "lib": ["dom", "esnext"],
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
