Add package-lock.json and update package.json for Jest testing framework; enhance token verification and arbitrage bot functionality with improved error handling and logging

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
