Integrate configuration management and enhance price logging: add config.js for centralized settings, update price logging functions to utilize configurable thresholds, and streamline error handling in price fetching. Remove TypeScript configuration file and improve overall code organization. STABLE

--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "module": "index.js",
   "type": "module",
   "private": true,
+  "scripts": {
+    "build": "babel src --out-dir dis"
+  },
+  "bin": "index.js",
   "devDependencies": {
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@types/bun": "latest",
     "@types/jest": "^30.0.0",
     "@types/ws": "^8.18.1",
