--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "arbitrage-alireza-mosusavi",
-  "module": "index.js",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "build": "babel src --out-dir dis"
-  },
-  "bin": "index.js",
-  "devDependencies": {
-    "@babel/cli": "^7.28.0",
-    "@babel/core": "^7.28.0",
-    "@babel/preset-env": "^7.28.0",
-    "@types/bun": "latest",
-    "@types/jest": "^30.0.0",
-    "@types/ws": "^8.18.1",
-    "jest": "^30.0.5",
-    "ts-jest": "^29.4.1",
-    "typescript": "^5.9.2"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
-  "dependencies": {
-    "axios": "^1.11.0",
-    "bottleneck": "^2.19.5",
-    "ccxt": "^4.4.99",
-    "chalk": "^5.5.0",
-    "decimal.js": "^10.6.0",
-    "dotenv": "^17.2.1",
-    "exceljs": "^4.4.0",
-    "fs": "^0.0.1-security",
-    "jalaali-js": "^1.2.8",
-    "puppeteer-core": "^24.16.0",
-    "ws": "^8.18.3"
-  }
+    "name": "arbitrage-alireza-mosusavi",
+    "module": "index.js",
+    "type": "module",
+    "private": true,
+    "scripts": {
+        "build": "babel src --out-dir dis"
+    },
+    "bin": "index.js",
+    "devDependencies": {
+        "@babel/cli": "^7.28.0",
+        "@babel/core": "^7.28.0",
+        "@babel/preset-env": "^7.28.0",
+        "@types/bun": "latest",
+        "@types/jest": "^30.0.0",
+        "@types/ws": "^8.18.1",
+        "jest": "^30.0.5",
+        "ts-jest": "^29.4.1",
+        "typescript": "^5.9.2"
+    },
+    "peerDependencies": {
+        "typescript": "^5"
+    },
+    "dependencies": {
+        "axios": "^1.11.0",
+        "bottleneck": "^2.19.5",
+        "ccxt": "^4.4.99",
+        "chalk": "^5.5.0",
+        "decimal.js": "^10.6.0",
+        "dotenv": "^17.2.1",
+        "exceljs": "^4.4.0",
+        "fs": "^0.0.1-security",
+        "jalaali-js": "^1.2.8",
+        "puppeteer": "^24.16.0",
+        "puppeteer-core": "^24.16.0",
+        "ws": "^8.18.3"
+    }
 }
