Refactor file structure and update import paths: reorganize source files into 'Arbitrage Logic' directory, update import statements in index.js, test_cache_performance.js, and other relevant files. Add new puppeteer script to package.json for enhanced functionality. Log additional session exit timestamps in requests.log for better tracking.
WORK VERY WELL

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "build": "babel src --out-dir dis"
+        "build": "babel src --out-dir dis",
+        "puppeteer": "node \"./src/Puppeteer Logic/index.js\""
     },
     "bin": "index.js",
     "devDependencies": {
