Implement Ourbit integration for bid and ask price extraction: update configuration to support Ourbit exchange, refactor price fetching logic in prices.js, and enhance trading logic to utilize Ourbit data. Adjust package.json to include new test scripts for Ourbit functionality. Ensure proper logging and error handling for improved system resilience.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "private": true,
     "scripts": {
         "build": "babel src --out-dir dis",
-        "puppeteer": "node \"./src/Puppeteer Logic/index.js\""
+        "puppeteer": "node \"./src/Puppeteer Logic/index.js\"",
+        "test-ourbit": "node test_ourbit_puppeteer.js",
+        "test-changes": "node test_price_changes.js"
     },
     "bin": "index.js",
     "devDependencies": {
