--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^17.2.1",
         "exceljs": "^4.4.0",
         "jalaali-js": "^1.2.8",
+        "log-update": "^6.1.0",
         "puppeteer": "^24.16.0",
         "puppeteer-core": "^24.16.0",
         "ws": "^8.18.3"
