--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "decimal.js": "^10.6.0",
         "dotenv": "^17.2.1",
         "exceljs": "^4.4.0",
+        "express": "^4.18.2",
         "jalaali-js": "^1.2.8",
         "log-update": "^6.1.0",
         "puppeteer": "^24.16.0",
         "puppeteer-core": "^24.16.0",
+        "socket.io": "^4.7.4",
         "ws": "^8.18.3"
     },
     "engines": {
