--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "express": "^4.18.2",
         "jalaali-js": "^1.2.8",
         "log-update": "^6.1.0",
+        "node-cron": "^4.2.1",
+        "p-limit": "^7.1.0",
+        "p-queue": "^8.1.0",
         "puppeteer": "^24.16.0",
         "puppeteer-core": "^24.16.0",
         "socket.io": "^4.7.4",
