--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "puppeteer:kcex": "node test_kcex_puppeteer.js",
         "clean": "node -e \"import('fs').then(fs=>fs.rmSync('dist',{recursive:true,force:true}))\"",
         "build": "npm run clean && node scripts/build.js",
-        "start:dist": "node dist/index.js"
+        "start:dist": "node dist/index.js",
+        "build:protect": "npm run build && node scripts/obfuscate.js",
+        "start:protected": "node dist_protected/index.js"
     },
     "dependencies": {
         "axios": "^1.11.0",
@@ -34,5 +36,8 @@
     },
     "engines": {
         "node": ">=18"
+    },
+    "devDependencies": {
+        "javascript-obfuscator": "^4.1.1"
     }
 }
