--- a/package.json
+++ b/package.json
@@ -1,17 +1,35 @@
 {
-    "name": "ccxt-arbitrage-bot",
+    "name": "arbitrage-bot-final",
     "version": "1.0.0",
+    "description": "High-performance cryptocurrency arbitrage bot with real-time monitoring",
     "main": "index.js",
     "type": "module",
     "private": true,
     "scripts": {
         "start": "node index.js",
+        "dev": "node --watch index.js",
         "clean": "node -e \"import('fs').then(fs=>fs.rmSync('dist',{recursive:true,force:true}))\"",
         "build": "npm run clean && node scripts/build.js",
         "start:dist": "node dist/index.js",
         "build:protect": "npm run build && node scripts/obfuscate.js",
-        "start:protected": "node dist_protected/index.js"
+        "start:protected": "node dist_protected/index.js",
+        "test": "echo \"No tests specified\" && exit 0",
+        "lint": "echo \"No linter configured\" && exit 0"
     },
+    "keywords": [
+        "arbitrage",
+        "cryptocurrency",
+        "trading",
+        "bot",
+        "mexc",
+        "lbank",
+        "kcex",
+        "ourbit",
+        "xt",
+        "dexscreener"
+    ],
+    "author": "Arbitrage Bot Team",
+    "license": "MIT",
     "dependencies": {
         "axios": "^1.11.0",
         "bottleneck": "^2.19.5",
@@ -35,6 +53,15 @@
         "javascript-obfuscator": "^4.1.0"
     },
     "engines": {
-        "node": ">=18"
-    }
+        "node": ">=18",
+        "npm": ">=8"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/your-username/arbitrage-bot-final.git"
+    },
+    "bugs": {
+        "url": "https://github.com/your-username/arbitrage-bot-final/issues"
+    },
+    "homepage": "https://github.com/your-username/arbitrage-bot-final#readme"
 }
