--- a/env.example
+++ b/env.example
@@ -1,32 +1,45 @@
-# DEX Trading Configuration
-# Copy this file to .env and fill in your actual values
+# Arbitrage Bot Configuration Example
+# Copy this file to config.env and fill in your actual values
 
-# 1inch API Key (Get from https://portal.1inch.dev/)
-ONEINCH_API_KEY=your_1inch_api_key_here
+# Exchange API Keys
+MEXC_API_KEY=your_mexc_api_key_here
+MEXC_SECRET_KEY=your_mexc_secret_key_here
 
-# Wallet Configuration
-WALLET_ADDRESS=0x0000000000000000000000000000000000000000
-WALLET_PRIVATE_KEY=your_private_key_here
+LBANK_API_KEY=your_lbank_api_key_here
+LBANK_SECRET_KEY=your_lbank_secret_key_here
 
-# Optional: Alternative DEX APIs
-# 0x API Key (Alternative to 1inch)
-ZEROX_API_KEY=your_0x_api_key_here
+# System Settings
+NODE_ENV=production
+PORT=8080
 
-# ParaSwap API (No key required)
-PARASWAP_ENABLED=true
+# Security Settings
+JWT_SECRET=your_jwt_secret_here
+ENCRYPTION_KEY=your_encryption_key_here
 
-# Jupiter API (For Solana - No key required)
-JUPITER_ENABLED=false
+# Logging Settings
+LOG_LEVEL=info
+LOG_FILE_PATH=./logs
 
-# Trading Configuration
-MIN_PROFIT_PERCENT=3.1
-SLIPPAGE_TOLERANCE=1
-MAX_TRADE_AMOUNT_USD=1000
+# Database Settings (if needed)
+DB_HOST=localhost
+DB_PORT=27017
+DB_NAME=arbitrage_bot
 
-# Gas Configuration (Base chain)
-GAS_LIMIT=300000
-GAS_PRICE_GWEI=0.1
+# Webhook Settings (for notifications)
+WEBHOOK_URL=your_webhook_url_here
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_CHAT_ID=your_telegram_chat_id_here
 
-# Network Configuration
-NETWORK=base
-RPC_URL=https://mainnet.base.org
+# Additional Security Settings
+RATE_LIMIT_WINDOW=60000
+RATE_LIMIT_MAX_REQUESTS=100
+SESSION_SECRET=your_session_secret_here
+
+# Proxy Settings (if needed)
+PROXY_HOST=
+PROXY_PORT=
+PROXY_USERNAME=
+PROXY_PASSWORD=
+
+# GitHub Authentication Token (Required)
+GITHUB_TOKEN=your_github_token_here
