--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "axios": "^1.11.0",
         "bottleneck": "^2.19.5",
         "ccxt": "^4.4.99",
-        "chalk": "^5.5.0",
+        "chalk": "4.1.2",
         "decimal.js": "^10.6.0",
         "dotenv": "^17.2.1",
         "exceljs": "^4.4.0",
